dataset1235/2025-2/1955397009/users/4018420266/executions/3933884819_1076448396.log
== SUBMISSION (2025-08-28 15:10:50)
-- CODE: 
a = float (input))
b = float (input())
c = float (input())
numerador = a + b + c
denominador = a**2 + b**2 + c**2
resultado = numerador / denominador 
print(f''{resultado:.7f}'')

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.0
2.0
3.0
---- correct output:
2.3333333
-- ERROR:
File "XXXX", line 1
    a = float (input))
                     ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
20.0
25.0
30.0
---- correct output:
25.6666667
-- ERROR:
File "XXXX", line 1
    a = float (input))
                     ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
235.0
400.0
350.0
---- correct output:
342.8680203
-- ERROR:
File "XXXX", line 1
    a = float (input))
                     ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
90.0
120.0
2.0
---- correct output:
106.1509434
-- ERROR:
File "XXXX", line 1
    a = float (input))
                     ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
100
50
0
---- correct output:
83.3333333
-- ERROR:
File "XXXX", line 1
    a = float (input))
                     ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
-1.0
-2.0
-5.0
---- correct output:
-3.75
-- ERROR:
File "XXXX", line 1
    a = float (input))
                     ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 15:09:03)
-- CODE: 

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.0
2.0
3.0
---- correct output:
2.3333333
---- user output:
None
-- TEST CASE 2:
---- input:
20.0
25.0
30.0
---- correct output:
25.6666667
---- user output:
None
-- TEST CASE 3:
---- input:
235.0
400.0
350.0
---- correct output:
342.8680203
---- user output:
None
-- TEST CASE 4:
---- input:
90.0
120.0
2.0
---- correct output:
106.1509434
---- user output:
None
-- TEST CASE 5:
---- input:
100
50
0
---- correct output:
83.3333333
---- user output:
None
-- TEST CASE 6:
---- input:
-1.0
-2.0
-5.0
---- correct output:
-3.75
---- user output:
None
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 15:04:25)
-- CODE: 
a = float (input())
b = float (input())
c = float (input())
numerador = a + b + c
denominador = a**2 + b**2 + c**2
resultado = numerador / denominador 
print(f''{resultado:.7f}'')

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.0
2.0
3.0
---- correct output:
2.3333333
-- ERROR:
File "XXXX", line 7
    print(f''{resultado:.7f}'')
                         ^
SyntaxError: invalid decimal literal
-- TEST CASE 2:
---- input:
20.0
25.0
30.0
---- correct output:
25.6666667
-- ERROR:
File "XXXX", line 7
    print(f''{resultado:.7f}'')
                         ^
SyntaxError: invalid decimal literal
-- TEST CASE 3:
---- input:
235.0
400.0
350.0
---- correct output:
342.8680203
-- ERROR:
File "XXXX", line 7
    print(f''{resultado:.7f}'')
                         ^
SyntaxError: invalid decimal literal
-- TEST CASE 4:
---- input:
90.0
120.0
2.0
---- correct output:
106.1509434
-- ERROR:
File "XXXX", line 7
    print(f''{resultado:.7f}'')
                         ^
SyntaxError: invalid decimal literal
-- TEST CASE 5:
---- input:
100
50
0
---- correct output:
83.3333333
-- ERROR:
File "XXXX", line 7
    print(f''{resultado:.7f}'')
                         ^
SyntaxError: invalid decimal literal
-- TEST CASE 6:
---- input:
-1.0
-2.0
-5.0
---- correct output:
-3.75
-- ERROR:
File "XXXX", line 7
    print(f''{resultado:.7f}'')
                         ^
SyntaxError: invalid decimal literal
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 15:04:24)
-- CODE: 
a = float (input())
b = float (input())
c = float (input())
numerador = a + b + c
denominador = a**2 + b**2 + c**2
resultado = numerador / denominador 
print(f''{resultado:.7f}'')

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.0
2.0
3.0
---- correct output:
2.3333333
-- ERROR:
File "XXXX", line 7
    print(f''{resultado:.7f}'')
                         ^
SyntaxError: invalid decimal literal
-- TEST CASE 2:
---- input:
20.0
25.0
30.0
---- correct output:
25.6666667
-- ERROR:
File "XXXX", line 7
    print(f''{resultado:.7f}'')
                         ^
SyntaxError: invalid decimal literal
-- TEST CASE 3:
---- input:
235.0
400.0
350.0
---- correct output:
342.8680203
-- ERROR:
File "XXXX", line 7
    print(f''{resultado:.7f}'')
                         ^
SyntaxError: invalid decimal literal
-- TEST CASE 4:
---- input:
90.0
120.0
2.0
---- correct output:
106.1509434
-- ERROR:
File "XXXX", line 7
    print(f''{resultado:.7f}'')
                         ^
SyntaxError: invalid decimal literal
-- TEST CASE 5:
---- input:
100
50
0
---- correct output:
83.3333333
-- ERROR:
File "XXXX", line 7
    print(f''{resultado:.7f}'')
                         ^
SyntaxError: invalid decimal literal
-- TEST CASE 6:
---- input:
-1.0
-2.0
-5.0
---- correct output:
-3.75
-- ERROR:
File "XXXX", line 7
    print(f''{resultado:.7f}'')
                         ^
SyntaxError: invalid decimal literal
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 15:05:12)
-- CODE: 
a = float (input())
b = float (input())
c = float (input())
numerador = a + b + c
denominador = a**2 + b**2 + c**2
resultado = numerador / denominador 
print(f''{resultado:.7f}'')

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.0
2.0
3.0
---- correct output:
2.3333333
-- ERROR:
File "XXXX", line 7
    print(f''{resultado:.7f}'')
                         ^
SyntaxError: invalid decimal literal
-- TEST CASE 2:
---- input:
20.0
25.0
30.0
---- correct output:
25.6666667
-- ERROR:
File "XXXX", line 7
    print(f''{resultado:.7f}'')
                         ^
SyntaxError: invalid decimal literal
-- TEST CASE 3:
---- input:
235.0
400.0
350.0
---- correct output:
342.8680203
-- ERROR:
File "XXXX", line 7
    print(f''{resultado:.7f}'')
                         ^
SyntaxError: invalid decimal literal
-- TEST CASE 4:
---- input:
90.0
120.0
2.0
---- correct output:
106.1509434
-- ERROR:
File "XXXX", line 7
    print(f''{resultado:.7f}'')
                         ^
SyntaxError: invalid decimal literal
-- TEST CASE 5:
---- input:
100
50
0
---- correct output:
83.3333333
-- ERROR:
File "XXXX", line 7
    print(f''{resultado:.7f}'')
                         ^
SyntaxError: invalid decimal literal
-- TEST CASE 6:
---- input:
-1.0
-2.0
-5.0
---- correct output:
-3.75
-- ERROR:
File "XXXX", line 7
    print(f''{resultado:.7f}'')
                         ^
SyntaxError: invalid decimal literal
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 15:09:06)
-- CODE: 
a = float (input(-1))
b = float (input(-2))
c = float (input(-3))
numerador = a + b + c
denominador = a**2 + b**2 + c**2
resultado = numerador / denominador 
print(f''{resultado:.7f}'')

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.0
2.0
3.0
---- correct output:
2.3333333
-- ERROR:
File "XXXX", line 7
    print(f''{resultado:.7f}'')
                         ^
SyntaxError: invalid decimal literal
-- TEST CASE 2:
---- input:
20.0
25.0
30.0
---- correct output:
25.6666667
-- ERROR:
File "XXXX", line 7
    print(f''{resultado:.7f}'')
                         ^
SyntaxError: invalid decimal literal
-- TEST CASE 3:
---- input:
235.0
400.0
350.0
---- correct output:
342.8680203
-- ERROR:
File "XXXX", line 7
    print(f''{resultado:.7f}'')
                         ^
SyntaxError: invalid decimal literal
-- TEST CASE 4:
---- input:
90.0
120.0
2.0
---- correct output:
106.1509434
-- ERROR:
File "XXXX", line 7
    print(f''{resultado:.7f}'')
                         ^
SyntaxError: invalid decimal literal
-- TEST CASE 5:
---- input:
100
50
0
---- correct output:
83.3333333
-- ERROR:
File "XXXX", line 7
    print(f''{resultado:.7f}'')
                         ^
SyntaxError: invalid decimal literal
-- TEST CASE 6:
---- input:
-1.0
-2.0
-5.0
---- correct output:
-3.75
-- ERROR:
File "XXXX", line 7
    print(f''{resultado:.7f}'')
                         ^
SyntaxError: invalid decimal literal
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 13:45:19)
-- CODE: 
a = float (input))
b = float (input())
c = float (input())
numerador = a + b + c
denominador = a**2 + b**2 + c**2
resultado = numerador / denominador 
print(f''{resultado:.7f}'')

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.0
2.0
3.0
---- correct output:
2.3333333
-- ERROR:
File "XXXX", line 1
    a = float (input))
                     ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
20.0
25.0
30.0
---- correct output:
25.6666667
-- ERROR:
File "XXXX", line 1
    a = float (input))
                     ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
235.0
400.0
350.0
---- correct output:
342.8680203
-- ERROR:
File "XXXX", line 1
    a = float (input))
                     ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
90.0
120.0
2.0
---- correct output:
106.1509434
-- ERROR:
File "XXXX", line 1
    a = float (input))
                     ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
100
50
0
---- correct output:
83.3333333
-- ERROR:
File "XXXX", line 1
    a = float (input))
                     ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
-1.0
-2.0
-5.0
---- correct output:
-3.75
-- ERROR:
File "XXXX", line 1
    a = float (input))
                     ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 13:45:20)
-- CODE: 
a = float (input))
b = float (input())
c = float (input())
numerador = a + b + c
denominador = a**2 + b**2 + c**2
resultado = numerador / denominador 
print(f''{resultado:.7f}'')

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.0
2.0
3.0
---- correct output:
2.3333333
-- ERROR:
File "XXXX", line 1
    a = float (input))
                     ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
20.0
25.0
30.0
---- correct output:
25.6666667
-- ERROR:
File "XXXX", line 1
    a = float (input))
                     ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
235.0
400.0
350.0
---- correct output:
342.8680203
-- ERROR:
File "XXXX", line 1
    a = float (input))
                     ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
90.0
120.0
2.0
---- correct output:
106.1509434
-- ERROR:
File "XXXX", line 1
    a = float (input))
                     ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
100
50
0
---- correct output:
83.3333333
-- ERROR:
File "XXXX", line 1
    a = float (input))
                     ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
-1.0
-2.0
-5.0
---- correct output:
-3.75
-- ERROR:
File "XXXX", line 1
    a = float (input))
                     ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 13:45:19)
-- CODE: 
a = float (input))
b = float (input())
c = float (input())
numerador = a + b + c
denominador = a**2 + b**2 + c**2
resultado = numerador / denominador 
print(f''{resultado:.7f}'')

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.0
2.0
3.0
---- correct output:
2.3333333
-- ERROR:
File "XXXX", line 1
    a = float (input))
                     ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
20.0
25.0
30.0
---- correct output:
25.6666667
-- ERROR:
File "XXXX", line 1
    a = float (input))
                     ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
235.0
400.0
350.0
---- correct output:
342.8680203
-- ERROR:
File "XXXX", line 1
    a = float (input))
                     ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
90.0
120.0
2.0
---- correct output:
106.1509434
-- ERROR:
File "XXXX", line 1
    a = float (input))
                     ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
100
50
0
---- correct output:
83.3333333
-- ERROR:
File "XXXX", line 1
    a = float (input))
                     ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
-1.0
-2.0
-5.0
---- correct output:
-3.75
-- ERROR:
File "XXXX", line 1
    a = float (input))
                     ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 12:52:00)
-- CODE: 
a = float (input))
b = float (input())
c = float (input())
numerador = a + b + c
denominador = a**2 + b**2 + c**2
resultado = numerador / denominador 
print(f''{resultado:.7f}'')

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.0
2.0
3.0
---- correct output:
2.3333333
-- ERROR:
File "XXXX", line 1
    a = float (input))
                     ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
20.0
25.0
30.0
---- correct output:
25.6666667
-- ERROR:
File "XXXX", line 1
    a = float (input))
                     ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
235.0
400.0
350.0
---- correct output:
342.8680203
-- ERROR:
File "XXXX", line 1
    a = float (input))
                     ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
90.0
120.0
2.0
---- correct output:
106.1509434
-- ERROR:
File "XXXX", line 1
    a = float (input))
                     ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
100
50
0
---- correct output:
83.3333333
-- ERROR:
File "XXXX", line 1
    a = float (input))
                     ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
-1.0
-2.0
-5.0
---- correct output:
-3.75
-- ERROR:
File "XXXX", line 1
    a = float (input))
                     ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 15:09:02)
-- CODE: 
a = float (input(-1))
b = float (input(-2))
c = float (input(-3))
numerador = a + b + c
denominador = a**2 + b**2 + c**2
resultado = numerador / denominador 
print(f''{resultado:.7f}'')

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.0
2.0
3.0
---- correct output:
2.3333333
-- ERROR:
File "XXXX", line 7
    print(f''{resultado:.7f}'')
                         ^
SyntaxError: invalid decimal literal
-- TEST CASE 2:
---- input:
20.0
25.0
30.0
---- correct output:
25.6666667
-- ERROR:
File "XXXX", line 7
    print(f''{resultado:.7f}'')
                         ^
SyntaxError: invalid decimal literal
-- TEST CASE 3:
---- input:
235.0
400.0
350.0
---- correct output:
342.8680203
-- ERROR:
File "XXXX", line 7
    print(f''{resultado:.7f}'')
                         ^
SyntaxError: invalid decimal literal
-- TEST CASE 4:
---- input:
90.0
120.0
2.0
---- correct output:
106.1509434
-- ERROR:
File "XXXX", line 7
    print(f''{resultado:.7f}'')
                         ^
SyntaxError: invalid decimal literal
-- TEST CASE 5:
---- input:
100
50
0
---- correct output:
83.3333333
-- ERROR:
File "XXXX", line 7
    print(f''{resultado:.7f}'')
                         ^
SyntaxError: invalid decimal literal
-- TEST CASE 6:
---- input:
-1.0
-2.0
-5.0
---- correct output:
-3.75
-- ERROR:
File "XXXX", line 7
    print(f''{resultado:.7f}'')
                         ^
SyntaxError: invalid decimal literal
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 13:45:19)
-- CODE: 
a = float (input))
b = float (input())
c = float (input())
numerador = a + b + c
denominador = a**2 + b**2 + c**2
resultado = numerador / denominador 
print(f''{resultado:.7f}'')

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.0
2.0
3.0
---- correct output:
2.3333333
-- ERROR:
File "XXXX", line 1
    a = float (input))
                     ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
20.0
25.0
30.0
---- correct output:
25.6666667
-- ERROR:
File "XXXX", line 1
    a = float (input))
                     ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
235.0
400.0
350.0
---- correct output:
342.8680203
-- ERROR:
File "XXXX", line 1
    a = float (input))
                     ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
90.0
120.0
2.0
---- correct output:
106.1509434
-- ERROR:
File "XXXX", line 1
    a = float (input))
                     ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
100
50
0
---- correct output:
83.3333333
-- ERROR:
File "XXXX", line 1
    a = float (input))
                     ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
-1.0
-2.0
-5.0
---- correct output:
-3.75
-- ERROR:
File "XXXX", line 1
    a = float (input))
                     ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 15:05:11)
-- CODE: 
a = float (input())
b = float (input())
c = float (input())
numerador = a + b + c
denominador = a**2 + b**2 + c**2
resultado = numerador / denominador 
print(f''{resultado:.7f}'')

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.0
2.0
3.0
---- correct output:
2.3333333
-- ERROR:
File "XXXX", line 7
    print(f''{resultado:.7f}'')
                         ^
SyntaxError: invalid decimal literal
-- TEST CASE 2:
---- input:
20.0
25.0
30.0
---- correct output:
25.6666667
-- ERROR:
File "XXXX", line 7
    print(f''{resultado:.7f}'')
                         ^
SyntaxError: invalid decimal literal
-- TEST CASE 3:
---- input:
235.0
400.0
350.0
---- correct output:
342.8680203
-- ERROR:
File "XXXX", line 7
    print(f''{resultado:.7f}'')
                         ^
SyntaxError: invalid decimal literal
-- TEST CASE 4:
---- input:
90.0
120.0
2.0
---- correct output:
106.1509434
-- ERROR:
File "XXXX", line 7
    print(f''{resultado:.7f}'')
                         ^
SyntaxError: invalid decimal literal
-- TEST CASE 5:
---- input:
100
50
0
---- correct output:
83.3333333
-- ERROR:
File "XXXX", line 7
    print(f''{resultado:.7f}'')
                         ^
SyntaxError: invalid decimal literal
-- TEST CASE 6:
---- input:
-1.0
-2.0
-5.0
---- correct output:
-3.75
-- ERROR:
File "XXXX", line 7
    print(f''{resultado:.7f}'')
                         ^
SyntaxError: invalid decimal literal
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 13:45:18)
-- CODE: 
a = float (input))
b = float (input())
c = float (input())
numerador = a + b + c
denominador = a**2 + b**2 + c**2
resultado = numerador / denominador 
print(f''{resultado:.7f}'')

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.0
2.0
3.0
---- correct output:
2.3333333
-- ERROR:
File "XXXX", line 1
    a = float (input))
                     ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
20.0
25.0
30.0
---- correct output:
25.6666667
-- ERROR:
File "XXXX", line 1
    a = float (input))
                     ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
235.0
400.0
350.0
---- correct output:
342.8680203
-- ERROR:
File "XXXX", line 1
    a = float (input))
                     ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
90.0
120.0
2.0
---- correct output:
106.1509434
-- ERROR:
File "XXXX", line 1
    a = float (input))
                     ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
100
50
0
---- correct output:
83.3333333
-- ERROR:
File "XXXX", line 1
    a = float (input))
                     ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
-1.0
-2.0
-5.0
---- correct output:
-3.75
-- ERROR:
File "XXXX", line 1
    a = float (input))
                     ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 15:09:06)
-- CODE: 
a = float (input(-1))
b = float (input(-2))
c = float (input(-3))
numerador = a + b + c
denominador = a**2 + b**2 + c**2
resultado = numerador / denominador 
print(f''{resultado:.7f}'')

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.0
2.0
3.0
---- correct output:
2.3333333
-- ERROR:
File "XXXX", line 7
    print(f''{resultado:.7f}'')
                         ^
SyntaxError: invalid decimal literal
-- TEST CASE 2:
---- input:
20.0
25.0
30.0
---- correct output:
25.6666667
-- ERROR:
File "XXXX", line 7
    print(f''{resultado:.7f}'')
                         ^
SyntaxError: invalid decimal literal
-- TEST CASE 3:
---- input:
235.0
400.0
350.0
---- correct output:
342.8680203
-- ERROR:
File "XXXX", line 7
    print(f''{resultado:.7f}'')
                         ^
SyntaxError: invalid decimal literal
-- TEST CASE 4:
---- input:
90.0
120.0
2.0
---- correct output:
106.1509434
-- ERROR:
File "XXXX", line 7
    print(f''{resultado:.7f}'')
                         ^
SyntaxError: invalid decimal literal
-- TEST CASE 5:
---- input:
100
50
0
---- correct output:
83.3333333
-- ERROR:
File "XXXX", line 7
    print(f''{resultado:.7f}'')
                         ^
SyntaxError: invalid decimal literal
-- TEST CASE 6:
---- input:
-1.0
-2.0
-5.0
---- correct output:
-3.75
-- ERROR:
File "XXXX", line 7
    print(f''{resultado:.7f}'')
                         ^
SyntaxError: invalid decimal literal
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 12:51:59)
-- CODE: 
a = float (input))
b = float (input())
c = float (input())
numerador = a + b + c
denominador = a**2 + b**2 + c**2
resultado = numerador / denominador 
print(f''{resultado:.7f}'')

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.0
2.0
3.0
---- correct output:
2.3333333
-- ERROR:
File "XXXX", line 1
    a = float (input))
                     ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
20.0
25.0
30.0
---- correct output:
25.6666667
-- ERROR:
File "XXXX", line 1
    a = float (input))
                     ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
235.0
400.0
350.0
---- correct output:
342.8680203
-- ERROR:
File "XXXX", line 1
    a = float (input))
                     ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
90.0
120.0
2.0
---- correct output:
106.1509434
-- ERROR:
File "XXXX", line 1
    a = float (input))
                     ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
100
50
0
---- correct output:
83.3333333
-- ERROR:
File "XXXX", line 1
    a = float (input))
                     ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
-1.0
-2.0
-5.0
---- correct output:
-3.75
-- ERROR:
File "XXXX", line 1
    a = float (input))
                     ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 15:04:22)
-- CODE: 
a = float (input())
b = float (input())
c = float (input())
numerador = a + b + c
denominador = a**2 + b**2 + c**2
resultado = numerador / denominador 
print(f''{resultado:.7f}'')

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.0
2.0
3.0
---- correct output:
2.3333333
-- ERROR:
File "XXXX", line 7
    print(f''{resultado:.7f}'')
                         ^
SyntaxError: invalid decimal literal
-- TEST CASE 2:
---- input:
20.0
25.0
30.0
---- correct output:
25.6666667
-- ERROR:
File "XXXX", line 7
    print(f''{resultado:.7f}'')
                         ^
SyntaxError: invalid decimal literal
-- TEST CASE 3:
---- input:
235.0
400.0
350.0
---- correct output:
342.8680203
-- ERROR:
File "XXXX", line 7
    print(f''{resultado:.7f}'')
                         ^
SyntaxError: invalid decimal literal
-- TEST CASE 4:
---- input:
90.0
120.0
2.0
---- correct output:
106.1509434
-- ERROR:
File "XXXX", line 7
    print(f''{resultado:.7f}'')
                         ^
SyntaxError: invalid decimal literal
-- TEST CASE 5:
---- input:
100
50
0
---- correct output:
83.3333333
-- ERROR:
File "XXXX", line 7
    print(f''{resultado:.7f}'')
                         ^
SyntaxError: invalid decimal literal
-- TEST CASE 6:
---- input:
-1.0
-2.0
-5.0
---- correct output:
-3.75
-- ERROR:
File "XXXX", line 7
    print(f''{resultado:.7f}'')
                         ^
SyntaxError: invalid decimal literal
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 15:09:02)
-- CODE: 
a = float (input(-1))
b = float (input(-2))
c = float (input(-3))
numerador = a + b + c
denominador = a**2 + b**2 + c**2
resultado = numerador / denominador 
print(f''{resultado:.7f}'')

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.0
2.0
3.0
---- correct output:
2.3333333
-- ERROR:
File "XXXX", line 7
    print(f''{resultado:.7f}'')
                         ^
SyntaxError: invalid decimal literal
-- TEST CASE 2:
---- input:
20.0
25.0
30.0
---- correct output:
25.6666667
-- ERROR:
File "XXXX", line 7
    print(f''{resultado:.7f}'')
                         ^
SyntaxError: invalid decimal literal
-- TEST CASE 3:
---- input:
235.0
400.0
350.0
---- correct output:
342.8680203
-- ERROR:
File "XXXX", line 7
    print(f''{resultado:.7f}'')
                         ^
SyntaxError: invalid decimal literal
-- TEST CASE 4:
---- input:
90.0
120.0
2.0
---- correct output:
106.1509434
-- ERROR:
File "XXXX", line 7
    print(f''{resultado:.7f}'')
                         ^
SyntaxError: invalid decimal literal
-- TEST CASE 5:
---- input:
100
50
0
---- correct output:
83.3333333
-- ERROR:
File "XXXX", line 7
    print(f''{resultado:.7f}'')
                         ^
SyntaxError: invalid decimal literal
-- TEST CASE 6:
---- input:
-1.0
-2.0
-5.0
---- correct output:
-3.75
-- ERROR:
File "XXXX", line 7
    print(f''{resultado:.7f}'')
                         ^
SyntaxError: invalid decimal literal
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 13:45:20)
-- CODE: 
a = float (input))
b = float (input())
c = float (input())
numerador = a + b + c
denominador = a**2 + b**2 + c**2
resultado = numerador / denominador 
print(f''{resultado:.7f}'')

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.0
2.0
3.0
---- correct output:
2.3333333
-- ERROR:
File "XXXX", line 1
    a = float (input))
                     ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
20.0
25.0
30.0
---- correct output:
25.6666667
-- ERROR:
File "XXXX", line 1
    a = float (input))
                     ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
235.0
400.0
350.0
---- correct output:
342.8680203
-- ERROR:
File "XXXX", line 1
    a = float (input))
                     ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
90.0
120.0
2.0
---- correct output:
106.1509434
-- ERROR:
File "XXXX", line 1
    a = float (input))
                     ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
100
50
0
---- correct output:
83.3333333
-- ERROR:
File "XXXX", line 1
    a = float (input))
                     ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
-1.0
-2.0
-5.0
---- correct output:
-3.75
-- ERROR:
File "XXXX", line 1
    a = float (input))
                     ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 15:09:04)
-- CODE: 
a = float (input(-1))
b = float (input(-2))
c = float (input(-3))
numerador = a + b + c
denominador = a**2 + b**2 + c**2
resultado = numerador / denominador 
print(f''{resultado:.7f}'')

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.0
2.0
3.0
---- correct output:
2.3333333
-- ERROR:
File "XXXX", line 7
    print(f''{resultado:.7f}'')
                         ^
SyntaxError: invalid decimal literal
-- TEST CASE 2:
---- input:
20.0
25.0
30.0
---- correct output:
25.6666667
-- ERROR:
File "XXXX", line 7
    print(f''{resultado:.7f}'')
                         ^
SyntaxError: invalid decimal literal
-- TEST CASE 3:
---- input:
235.0
400.0
350.0
---- correct output:
342.8680203
-- ERROR:
File "XXXX", line 7
    print(f''{resultado:.7f}'')
                         ^
SyntaxError: invalid decimal literal
-- TEST CASE 4:
---- input:
90.0
120.0
2.0
---- correct output:
106.1509434
-- ERROR:
File "XXXX", line 7
    print(f''{resultado:.7f}'')
                         ^
SyntaxError: invalid decimal literal
-- TEST CASE 5:
---- input:
100
50
0
---- correct output:
83.3333333
-- ERROR:
File "XXXX", line 7
    print(f''{resultado:.7f}'')
                         ^
SyntaxError: invalid decimal literal
-- TEST CASE 6:
---- input:
-1.0
-2.0
-5.0
---- correct output:
-3.75
-- ERROR:
File "XXXX", line 7
    print(f''{resultado:.7f}'')
                         ^
SyntaxError: invalid decimal literal
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 15:09:03)
-- CODE: 
a = float (input(-1))
b = float (input(-2))
c = float (input(-3))
numerador = a + b + c
denominador = a**2 + b**2 + c**2
resultado = numerador / denominador 
print(f''{resultado:.7f}'')

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.0
2.0
3.0
---- correct output:
2.3333333
-- ERROR:
File "XXXX", line 7
    print(f''{resultado:.7f}'')
                         ^
SyntaxError: invalid decimal literal
-- TEST CASE 2:
---- input:
20.0
25.0
30.0
---- correct output:
25.6666667
-- ERROR:
File "XXXX", line 7
    print(f''{resultado:.7f}'')
                         ^
SyntaxError: invalid decimal literal
-- TEST CASE 3:
---- input:
235.0
400.0
350.0
---- correct output:
342.8680203
-- ERROR:
File "XXXX", line 7
    print(f''{resultado:.7f}'')
                         ^
SyntaxError: invalid decimal literal
-- TEST CASE 4:
---- input:
90.0
120.0
2.0
---- correct output:
106.1509434
-- ERROR:
File "XXXX", line 7
    print(f''{resultado:.7f}'')
                         ^
SyntaxError: invalid decimal literal
-- TEST CASE 5:
---- input:
100
50
0
---- correct output:
83.3333333
-- ERROR:
File "XXXX", line 7
    print(f''{resultado:.7f}'')
                         ^
SyntaxError: invalid decimal literal
-- TEST CASE 6:
---- input:
-1.0
-2.0
-5.0
---- correct output:
-3.75
-- ERROR:
File "XXXX", line 7
    print(f''{resultado:.7f}'')
                         ^
SyntaxError: invalid decimal literal
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 13:45:17)
-- CODE: 
a = float (input))
b = float (input())
c = float (input())
numerador = a + b + c
denominador = a**2 + b**2 + c**2
resultado = numerador / denominador 
print(f''{resultado:.7f}'')

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.0
2.0
3.0
---- correct output:
2.3333333
-- ERROR:
File "XXXX", line 1
    a = float (input))
                     ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
20.0
25.0
30.0
---- correct output:
25.6666667
-- ERROR:
File "XXXX", line 1
    a = float (input))
                     ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
235.0
400.0
350.0
---- correct output:
342.8680203
-- ERROR:
File "XXXX", line 1
    a = float (input))
                     ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
90.0
120.0
2.0
---- correct output:
106.1509434
-- ERROR:
File "XXXX", line 1
    a = float (input))
                     ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
100
50
0
---- correct output:
83.3333333
-- ERROR:
File "XXXX", line 1
    a = float (input))
                     ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
-1.0
-2.0
-5.0
---- correct output:
-3.75
-- ERROR:
File "XXXX", line 1
    a = float (input))
                     ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 15:09:02)
-- CODE: 
a = float (input(-1))
b = float (input(-2))
c = float (input(-3))
numerador = a + b + c
denominador = a**2 + b**2 + c**2
resultado = numerador / denominador 
print(f''{resultado:.7f}'')

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.0
2.0
3.0
---- correct output:
2.3333333
-- ERROR:
File "XXXX", line 7
    print(f''{resultado:.7f}'')
                         ^
SyntaxError: invalid decimal literal
-- TEST CASE 2:
---- input:
20.0
25.0
30.0
---- correct output:
25.6666667
-- ERROR:
File "XXXX", line 7
    print(f''{resultado:.7f}'')
                         ^
SyntaxError: invalid decimal literal
-- TEST CASE 3:
---- input:
235.0
400.0
350.0
---- correct output:
342.8680203
-- ERROR:
File "XXXX", line 7
    print(f''{resultado:.7f}'')
                         ^
SyntaxError: invalid decimal literal
-- TEST CASE 4:
---- input:
90.0
120.0
2.0
---- correct output:
106.1509434
-- ERROR:
File "XXXX", line 7
    print(f''{resultado:.7f}'')
                         ^
SyntaxError: invalid decimal literal
-- TEST CASE 5:
---- input:
100
50
0
---- correct output:
83.3333333
-- ERROR:
File "XXXX", line 7
    print(f''{resultado:.7f}'')
                         ^
SyntaxError: invalid decimal literal
-- TEST CASE 6:
---- input:
-1.0
-2.0
-5.0
---- correct output:
-3.75
-- ERROR:
File "XXXX", line 7
    print(f''{resultado:.7f}'')
                         ^
SyntaxError: invalid decimal literal
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
